# trend-researcher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cloudbuild-dev.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-and-first-crawl/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  SKELETON.md
.planning/phases/02-multi-source-ingest/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  CONTEXT.md  SMOKE-RESULTS.md
.planning/phases/03-scheduler-ops-baseline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  CONTEXT.md  DISCUSS-CHECKPOINT.json  DISCUSSION-LOG.md  SMOKE-RESULTS.md
.planning/phases/04-topic-api-ui-shell/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-UI-SPEC.md  04-VERIFICATION.md  CLOUD-RUN-DEPLOY.md  CONTEXT.md  DISCUSS-CHECKPOINT.json  DISCUSSION-LOG.md  SMOKE-RESULTS.md
.planning/phases/04.5-topic-description-capture-url-resolution/: 04.5-01-PLAN.md  04.5-01-SUMMARY.md  DISCUSSION-LOG.md  deferred-items.md
.planning/phases/04.5.1-google-news-description-skip/: 04.5.1-01-PLAN.md  04.5.1-01-SUMMARY.md  RUN-v0.5.1.md
.planning/phases/10-multi-tenant-platform/: 10-00-PLAN.md  10-01-PLAN.md  10-02-PLAN.md  10-03-PLAN.md  10-04-PLAN.md  10-05-PLAN.md  10-05-SUMMARY.md  CONTEXT.md  STACK-EVALUATION.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
docs/sessions/: 2026-05-18-phase-04.5.1-shipped-login-page-next.md  2026-05-18-phase-6-assessment-ui-buttons.md  2026-05-21-background-jobs-docs-update.md  2026-05-22-architecture-doc-and-docs-refresh.md  2026-05-28-phase-10-04-frontend-spa-shell-complete.md  2026-05-28-phase-10-05-harmonization-complete.md
scripts/: backfill_descriptions.py  clear_google_news_descriptions.py  dev-up.sh  pg-dump-rotate.sh  pull-models.sh  smoke_phase2.sh  smoke_phase3.sh  smoke_phase4.sh
services/api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
services/api/src/api/: dependencies.py  main.py  schemas.py
services/api/src/api/auth/: __init__.py  middleware.py  seed.py
services/api/src/api/middleware/: __init__.py  dump_debouncer.py  pat_auth.py
services/api/src/api/routes/: __init__.py  ai_config.py  assessment.py  auth.py  crawl_config.py  dashboard.py  department_pats.py  department_sources.py  departments.py  frameworks.py  harmonization.py  healthz.py  internal.py  runs.py  topics.py  users.py
services/api/tests/: conftest.py  test_active_department_dependency.py  test_department_pats.py  test_departments.py  test_dump_debouncer.py  test_frameworks_endpoints.py  test_harmonization_endpoints.py  test_healthz.py  test_internal_crawl.py  test_internal_dept_crawl.py  test_pat_auth.py  test_runs.py  test_scoped_endpoints.py  test_static_mount.py  test_topics_detail.py  test_topics_list.py
services/assessor/: README.md  pyproject.toml
services/assessor/src/assessor/adapters/: __init__.py  anthropic_adapter.py  ollama_adapter.py  openai_adapter.py  postgres_rag.py
services/assessor/src/assessor/app/: __init__.py  cli.py  composition.py
services/assessor/src/assessor/domain/: __init__.py  pipeline.py  prompts.py
services/assessor/src/assessor/domain/frameworks/: __init__.py  base.py  pestle.py  registry.py  swot.py  verdict.py
services/assessor/src/assessor/ports/: __init__.py  llm.py  rag.py
services/assessor/tests/: test_frameworks.py  test_pipeline_framework_aware.py
services/assessor/tests/fixtures/: verdict_prompt_golden.txt
services/crawler/: Dockerfile  README.md  pyproject.toml
services/crawler/src/crawler/adapters/persistence/: sqlalchemy_crawl_run_repository.py  sqlalchemy_topic_repository.py
services/crawler/src/crawler/adapters/sources/: google_news_url.py  hackernews.py  reddit.py  rss.py
services/crawler/src/crawler/app/: cli.py  composition.py  logging.py  orchestrator.py
services/crawler/src/crawler/domain/: __init__.py  dedup.py  raw_item.py
services/crawler/src/crawler/ports/: __init__.py  crawl_run_repository_port.py  source_port.py  topic_repository_port.py
services/crawler/tests/: conftest.py  test_composition_dept_filter.py  test_composition_disabled_sources.py  test_cross_source_dedup.py  test_dedup.py  test_google_news_url.py  test_hackernews_adapter.py  test_orchestrator.py  test_orchestrator_dept_sources.py  test_orchestrator_writes_crawl_run.py  test_reddit_adapter.py  test_rss_adapter.py  test_sqlalchemy_crawl_run_repository.py  test_sqlalchemy_topic_repository.py
services/scheduler/: Dockerfile  README.md  crontab  entrypoint.sh
web/: .gitignore  README.md  index.html  package-lock.json  package.json  test-setup.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/scripts/: gen-api-types.mjs
web/src/: App.vue  main.ts
web/src/api/: aiConfig.ts  assessment.ts  client.ts  crawlConfig.ts  dashboard.ts  departmentSources.ts  departments.ts  harmonization.ts  topics.ts  users.ts
web/src/components/: AppBar.vue  BusinessCaseCard.vue  DepartmentSwitcher.spec.ts  DepartmentSwitcher.vue  FrameworkPicker.vue  HarmonizationTab.spec.ts  HarmonizationTab.vue  NavDrawer.vue  NetViewEditor.vue
web/src/lib/: format.ts  roles.ts  strings.ts
web/src/plugins/: vuetify.ts
web/src/router/: index.ts
web/src/stores/: frameworks.ts  session.spec.ts  session.ts  ui.ts
web/src/views/: AIConfig.vue  Admin.vue  Assessment.vue  CrawlConfig.vue  Dashboard.vue  Login.vue  (+7 more)
(+4 files in other folders)
