[project]
name = "trend-researcher"
version = "0.1.0"
description = "Two-stage internal tool: deterministic Python ingest + AI-driven retail-market assessment over a Postgres topic store."
requires-python = ">=3.12"
dependencies = [
    "core",
    "crawler",
    "api",
    "assessor",
]

[tool.uv.workspace]
# Explicit member list (not `services/*`) because services/scheduler is a
# pure alpine+crond+docker-cli container with no Python code or pyproject.toml.
# Added in Plan 03-04; surfaced by the Plan 03-05 smoke run.
members = [
    "packages/core",
    "services/api",
    "services/assessor",
    "services/crawler",
]

[tool.uv.sources]
core = { workspace = true }
crawler = { workspace = true }
api = { workspace = true }
assessor = { workspace = true }
