[project]
name = "api"
version = "0.1.0"
description = "Read API service over the topic store. Scaffold only in Phase 1; implemented in Phase 4."
requires-python = ">=3.12"
dependencies = ["core"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
