[project]
name = "api"
version = "0.1.0"
description = "Read API service. Phase 3 ships /healthz + /runs (operational); Phase 4 adds topic-read product API."
requires-python = ">=3.12"
dependencies = [
    "core",
    "crawler",
    "assessor",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "bcrypt>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
core = { workspace = true }
crawler = { workspace = true }
assessor = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
