[project]
name = "assessor"
version = "0.1.0"
description = "Stage 2 AI assessor: RAG over the topic store, retail relevance + business cases. Scaffold only in Phase 1; implemented in Phase 6."
requires-python = ">=3.12"
dependencies = ["core"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assessor"]
