[project]
name = "assessor"
version = "0.6.0"
description = "Stage 2 AI assessor: RAG over the topic store, retail relevance + business cases."
requires-python = ">=3.12"
dependencies = [
    "core",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "structlog>=24.1",
    "typer>=0.12",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assessor"]
