[project]
name = "crawler"
version = "0.1.0"
description = "Stage 1 ingest service: deterministic, zero-AI crawler that pulls top-N items per source and writes deduplicated topics to Postgres."
requires-python = ">=3.12"
dependencies = ["core"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
