[project]
name = "crawler"
version = "0.1.0"
description = "Stage 1 ingest service: deterministic, zero-AI crawler that pulls top-N items per source and writes deduplicated topics to Postgres."
requires-python = ">=3.12"
dependencies = [
    "core",
    "rapidfuzz>=3.6,<4.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "structlog>=24.1,<25.0",
    "feedparser>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
crawler = "crawler.app.cli:app"

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
